--- a/style.css
+++ b/style.css
@@ -50,3 +50,12 @@ body{
     border: 5px solid grey;
     
 }
+
+.rock-button,.paper-button,.scissor-button{
+    /* height: 240px;
+    width: 240px; */
+    padding: 20px;
+    margin: 0px 20px;
+    border-radius: 200px;
+    border: 5px solid grey;
+}
