--- a/practice.css
+++ b/practice.css
@@ -1,10 +1,48 @@
-div.image-prac{
+body{
+    height: 100vh;
+    background: url(https://i.pinimg.com/originals/67/18/22/671822c2f63dd5f65d8fd15c9710420b.jpg) no-repeat center center/cover;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#add-task-container{
+    width: 350px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0 0 3px;
+
     display: flex;
 }
-.img-edit{
-    height: 120px;
+
+input{
+    flex: 5;
+    margin-right: 10px;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    padding: 5px;
 }
-.text{
-    color: red;
-    font-size: xx-large;
+
+
+#add-task{
+
+    flex: 1;
+
+    font-size: 1.2rem;
+    padding: 5px;
+
+    background-color: white;
+    color: green;
+
+
+    border: green solid 2px;
+    border-radius: 10px;
+}
+
+#add-task:hover{
+    background-color: green;
+    color: white;
 }
